fixing layout issues

--- a/frontend/todo-list/src/app/components/footer/footer.component.css
+++ b/frontend/todo-list/src/app/components/footer/footer.component.css
@@ -1,6 +1,7 @@
 .app-footer {
   position: fixed;
   bottom: 0;
+  height: 60px;
   display: flex;
   justify-content: flex-end;
   font-weight: 100;
