--- a/frontend/todo-list/src/app/components/header/header.component.css
+++ b/frontend/todo-list/src/app/components/header/header.component.css
@@ -1,5 +1,7 @@
 .app-header {
-  height: 60px;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
 
 .app-header i {
